# reservoir

./: .gitignore  README.md  build.sh  build.stm32_nucleo_l476rg.sh  clean.sh  training.txt
app/: CMakeLists.txt  Untitled.ipynb  linalg.c  linalg.h  main.c  mat.c  mat.h  predicted.txt  reservoir.c  reservoir.h  reservoir_batch_f32  reservoir_f32  reservoir_f64  weights.c
app/cmcis/: application.c  application.h  application_log.c  application_log.h  mat.c  mat.h  training_data.c
app/cmsis/: application.h  application_log.h  mat.h
app/generic/: main.c  mat.h
stm32_cubemx/: common.mk
stm32_cubemx/nucleo_l476rg/: .mxproject  Makefile  STM32L476RGTx_FLASH.ld  nucleo_l476rg.ioc
stm32_cubemx/nucleo_l476rg/Core/Src/: main.c
tool/data-gen/: CMakeLists.txt  main.c
tool/weights-gen/: CMakeLists.txt  main.c
visualization/: Untitled.ipynb
